# Caixa_Diario

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/routes/: export.py  transform.py  upload.py
app/schemas/: dashboard.py  lancamentos.py
app/services/: calculos.py  excel_parser.py  excel_write.py
caixa_diario_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
testes/: teste_rota_export.py  teste_rota_upload_xlsx_existente.py
